--- a/info.conf
+++ b/info.conf
@@ -1,3 +1,4 @@
 [URL]
 entire_url = https://www.mightyape.co.nz/games/ps4/adventure-rpg/all?page=
 target = https://www.mightyape.co.nz
+file_location = webExtract.games.dat
