--- a/info.conf
+++ b/info.conf
@@ -2,3 +2,11 @@
 entire_url = https://www.mightyape.co.nz/games/ps4/adventure-rpg/all?page=
 target = https://www.mightyape.co.nz
 file_location = webExtract.games.dat
+game_id_xpath = //div[@class="productDetails"]/div/div[last()]/div/text()
+game_subtitle_xpath = //span[@class="nameSubtitle"]/text()
+game_title_xpath = //header/h1/text()
+price_unavailable = //div[@class="stock-status unavailable"]
+dollars = //span[@class="dollar"]/text()
+cents = //span[@class="cents"]/text()
+clz_xpath = //div[@class="classification"]/img/@alt
+release_data_xpath = //div[@class="productDetails"]/div/div/div/text()
