duplicated code fixed

--- a/info.conf
+++ b/info.conf
@@ -4,9 +4,11 @@ target = https://www.mightyape.co.nz
 file_location = webExtract.games.dat
 game_id_xpath = //div[@class="productDetails"]/div/div[last()]/div/text()
 subtitle_xpath = //span[@class="nameSubtitle"]/text()
+subtitle_len = //span[@class="nameSubtitle"]
 title_xpath = //header/h1/text()
 price_unavailable = //div[@class="stock-status unavailable"]
 dollars = //span[@class="dollar"]/text()
 cents = //span[@class="cents"]/text()
 clz_xpath = //div[@class="classification"]/img/@alt
+status = //div[@class="status"]/text()
 release_data_xpath = //div[@class="productDetails"]/div/div/div/text()
